Some style fixings to align to new look&feel

--- a/coinffeine-gui/src/main/resources/css/main.css
+++ b/coinffeine-gui/src/main/resources/css/main.css
@@ -15,7 +15,7 @@
 }
 
 #balance-pane {
-    -fx-padding: 20;
+    -fx-padding: 10 20 10 20;
     -fx-min-width: 300;
 }
 
@@ -27,9 +27,10 @@
     -fx-background-color: transparent;
     -fx-text-fill: #c8b9b3;
     -fx-font-size: 16;
-    -fx-font-weight: 100;
+    -fx-font-weight: 300;
     -fx-border-color: #c8b9b3;
     -fx-border-width: 0 0 1 0;
+    -fx-min-width: 180;
 }
 
 #view-selector-pane .toggle-button:selected {
